# IGUA

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: package.yml  test.yml
docs/: cli.rst  conf.py  index.rst  requirements.txt
docs/api/: clustering.rst  index.rst  mmseqs.rst  pipeline.rst
docs/api/dataset/: antismash.rst  base.rst  defensefinder.rst  fasta_gff.rst  genbank.rst  list.rst
docs/guide/: copyright.rst  index.rst  installing.rst  running.rst  scripting.rst
igua/: _utils.py  base_dataset.py  cli.py  cluster_extractor.py  clustering.py  defensefinder_dataset.py  fasta_gff_dataset.py  genbank_dataset.py  mmseqs.py  pipeline.py  seqio.py  sink.py
igua/cli/: __init__.py
igua/dataset/: antismash.py  base.py  fasta_gff.py  genbank.py  list.py
igua/hca/: distance.rs  lib.rs
pkg/aur/: PKGBUILD.in
pkg/singularity/: igua.def
src/igua/: __init__.py  _utils.py  clustering.py  mmseqs.py  pipeline.py
src/igua/cli/: __init__.py  inputs.py
src/igua/dataset/: defensefinder.py  fasta_gff.py  genbank.py  list.py
src/igua/hca/: clustering.rs  distance.rs
tests/: test_distance.py  test_utils.py
tests/regression/: test_output_regression.py  test_ref.py
