[package]
name = "igua-hca"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "hca"
path = "src/igua/hca/lib.rs"

[dependencies.pyo3]
version = "0.27"
features = ["abi3-py38"]
[dependencies.numpy]
version = "0.27"
features = ["half"]
[dependencies.rayon]
version = "1.7"
[dependencies.kodama]
version = "0.2"
[dependencies.num-traits]
version = "0.2.14"
[dependencies.half]
version = "2.2"
features = ["num-traits"]

[features]
extension-module = ["pyo3/extension-module"]
cpython = []
nightly = []
