[build-system]
requires = ["maturin ~=1.2"]
build-backend = "maturin"

[project]
name = "igua"
version = "0.2.0-dev.1"
description = "Iterative Gene clUster Analysis, a high-throughput method for gene cluster family identification."
readme = 'README.md'
requires-python = ">=3.7"
license = { file = "COPYING" }
authors = [
  { name = "Martin Larralde", email = "martin.larralde@embl.de" },
]
keywords = ["bioinformatics", "clusters", "gene", "family"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed"
]
dependencies = [
    "scipy ~=1.4",
    "gb-io ~=0.3.0",
    "rich >=12.6,<15.0",
    "numpy >=1.0,<3.0",
    "pandas >=1.3,<4.0",
    "anndata >=0.8,<0.13",
    "biopython ~=1.79",
]

[project.urls]
"Homepage" = "https://github.com/zellerlab/IGUA/"
"Bug Tracker" = "https://github.com/zellerlab/IGUA/issues"
"Changelog" = "https://github.com/zellerlab/IGUA/blob/master/CHANGELOG.md"
# "Coverage" = "https://codecov.io/gh/zellerlab/IGUA/"
"Builds" = "https://github.com/zellerlab/IGUA/actions/"
"PyPI" = "https://pypi.org/project/IGUA"

[project.scripts]
igua = "igua.cli:main"

[tool.maturin]
manifest-path = "Cargo.toml"
features = ["extension-module"]
python-source = "src"
module-name = "igua.hca"

[tool.cibuildwheel]
skip = ["*-musllinux_i686"]
before-build = "pip install maturin"
#test-command = "python -m unittest tests -v"
build-verbosity = 1
free-threaded-support = false

[tool.cibuildwheel.linux]
environment = { PATH="$PATH:$HOME/.cargo/bin" }
before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh /dev/stdin -y"

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if typing.TYPE_CHECKING:",
    "@abc.abstractmethod",
    "@abc.abstractproperty",
    "raise NotImplementedError",
    "return NotImplemented",
    "raise UnexpectedError",
    "raise AllocationError",
]

[tool.mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
